<resources>
    <string name="app_name">Ecolink</string>
    <string name="logout">logout</string>
    <string name="info">info</string>
    <string name="profile">profile</string>
    <string name="events">events</string>
    <string name="news">news</string>
    <string name="eventDate1">sdfsfsf</string>
    <string name="event1">dqfsfsfsfsffs</string>
    <string name="newsDesc3">fssgsdgsdgsdgsdgsdgsdgfsgsg</string>
    <string name="newsDesc2">qdsdgsdgsdgsdgsdgsdgsdgqff</string>
    <string name="newsDesc1">qsdqscfsdfsdgsdgsdgsdgfsqf</string>
    <string name="news1">dqdqfq</string>
    <string name="news2">sdqsdqf</string>
    <string name="news3">dqdqf</string>
    <string name="A">A</string>
    <string name="B">B</string>
    <string name="action_1">Show More</string>
    <string name="blogs">lessons</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">"Le Croissant-Rouge "</string>
    <string name="header">Le Croissant-Rouge est le pendant, dans les pays d\'islam, de la Croix-Rouge. Cette dernière organisation, on le sait, a été fondée en 1863 à Genève à l\'instigation d\'Henri Dunant pour porter secours aux blessés de guerre Le Croissant-Rouge est le pendant, dans les pays d\'islam, de.</string>
    <string name="enter_comment">Enter your comment</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string-array name="user_types">
        <item>Contributeur</item>
        <item>Organisateur</item>
    </string-array>
</resources>